--- a/MediaPlayerExam/packages.config
+++ b/MediaPlayerExam/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net472" />
+  <package id="Hardcodet.Wpf.TaskbarNotification" version="1.0.5" targetFramework="net472" />
   <package id="Mpv.NET" version="1.2.0" targetFramework="net472" />
   <package id="Vlc.DotNet.Core" version="3.1.0" targetFramework="net472" />
   <package id="Vlc.DotNet.Core.Interops" version="3.1.0" targetFramework="net472" />
